Linting: linting code

--- a/templates/initview.mustache
+++ b/templates/initview.mustache
@@ -20,7 +20,7 @@
     Context variables required for this template:
     Example context (json):
     {
-        "userid" : 1,
+        "userid" : 1
 
     }
 }}
