--- a/templates/dashboards/dashboard_rules.mustache
+++ b/templates/dashboards/dashboard_rules.mustache
@@ -28,6 +28,6 @@
 <div>
     <h2>{{#str}} rulesdashboard, local_taskflow {{/str}}</h2>
     <p>{{#str}} rulesdescription, local_taskflow {{/str}}</p>
-    <div class="rulestable">{{{table}}}xxx</div>
+    <div class="rulestable">{{{table}}}</div>
 <a class="btn btn-primary" href="{{url}}">{{#str}} createrule, local_taskflow {{/str}}</a>
 </div>
