Improvement: First draft of assignmentstable

--- a/templates/dashboards/dashboard_assignments.mustache
+++ b/templates/dashboards/dashboard_assignments.mustache
@@ -26,5 +26,7 @@
 }}
 
 <div>
-<a class="btn btn-primary" href="{{link}}">{{#str}} createrule, local_taskflow {{/str}}</a>
+<h2>{{#str}} assignmentsdashboard, local_taskflow {{/str}}</h2>
+    <p>{{#str}} assignmentsdescription, local_taskflow {{/str}}</p>
+    <div class="assignmentstable">{{{table}}}</div>
 </div>
