Improvement: Refactor view.php

--- a/templates/dashboards/dashboard_assignments.mustache
+++ b/templates/dashboards/dashboard_assignments.mustache
@@ -26,7 +26,7 @@
 }}
 
 <div>
-<h2>{{#str}} assignmentsdashboard, local_taskflow {{/str}}</h2>
-    <p>{{#str}} assignmentsdescription, local_taskflow {{/str}}</p>
+<h2>{{headline}}</h2>
+    <p>{{description}}</p>
     <div class="assignmentstable">{{{table}}}</div>
 </div>
