--- a/templates/userassignment.mustache
+++ b/templates/userassignment.mustache
@@ -29,67 +29,18 @@
 
 <div class="container my-4">
     <!-- Dashboard Header -->
-    <h1 class="mb-4">Training Dashboard</h1>
-
-    <!-- Row for Upcoming and Completed Trainings -->
+    <!-- myassignments -->
     <div class="row">
         <!-- Upcoming Trainings -->
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header bg-primary text-white">
-                    Upcoming Trainings
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Training 1 - <span class="badge bg-success">Select Date</span></li>
-                    <li class="list-group-item">Training 2 - <span class="badge bg-success">Select Date</span></li>
-                    <!-- Additional trainings -->
-                </ul>
-            </div>
-        </div>
-
-        <!-- Completed Trainings -->
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header bg-success text-white">
-                    Completed Trainings
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Training 3 - Completed on 01/01/2023</li>
-                    <li class="list-group-item">Training 4 - Completed on 05/15/2023</li>
-                    <!-- Additional completed trainings -->
-                </ul>
-            </div>
+        <div class="col-md-12">
+            {{{myassignments}}}
         </div>
     </div>
-
-    <!-- Row for Assignments and Certificates -->
+    <!-- supervisorassignments -->
     <div class="row my-4">
-        <!-- Past Assignments -->
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header bg-warning">
-                    Past Assignments
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Assignment 1 - Submitted on 07/20/2023</li>
-                    <li class="list-group-item">Assignment 2 - Submitted on 08/18/2023</li>
-                    <!-- Additional assignments -->
-                </ul>
-            </div>
-        </div>
-
-        <!-- Certificates -->
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header bg-info text-white">
-                    Certificates
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Certificate for Training 3</li>
-                    <li class="list-group-item">Certificate for Training 4</li>
-                    <!-- Additional certificates -->
-                </ul>
-            </div>
+        <!-- supervisorassignments -->
+        <div class="col-md-12">
+            {{{supervisorassignments}}}
         </div>
     </div>
 </div>
