Linting: linting code

--- a/templates/editassignment.mustache
+++ b/templates/editassignment.mustache
@@ -40,8 +40,9 @@
         <dd class="col-sm-8">{{value}}</dd>
         {{/assignmentdata}}
       </dl>
-    <div data-id="assignmentform" data-assignmentid="{{id}}">
-      {{{editassignmentform}}}
+        <div data-id="assignmentform" data-assignmentid="{{id}}">
+        {{{editassignmentform}}}
+        </div>
     </div>
   </div>
 
