--- a/templates/singleassignment.mustache
+++ b/templates/singleassignment.mustache
@@ -26,7 +26,7 @@
 }}
 
 <!-- Ensure the following markup resides within the content area of your Moodle page -->
-<div class="container my-4">
+<div class="container my-4" id="userassignmentview">
   <!-- Eckdaten -->
   <div class="card mb-4">
     <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center pr-4">
@@ -54,7 +54,8 @@
                         data-targetid="{{targetid}}"
                         data-assignmentid="{{assignmentid}}"
                         data-competencyid="{{targetid}}"
-                        data-evidenceid="{{evidence.competencyevidenceid}}">
+                        data-evidenceid="{{evidence.competencyevidenceid}}"
+                        data-assingmentcompetencyid="{{evidence.id}}">
                         <i class="fas fa-upload"></i> {{#str}} uploadevidence , local_taskflow {{/str}}
                     </button>
                     {{/evidence.evidence_name}}
@@ -65,7 +66,8 @@
                         data-targetid="{{targetid}}"
                         data-assignmentid="{{assignmentid}}"
                         data-competencyid="{{targetid}}"
-                        data-evidenceid="{{evidence.competencyevidenceid}}">
+                        data-evidenceid="{{evidence.competencyevidenceid}}"
+                        data-assingmentcompetencyid="{{evidence.id}}">
                         <i class="fas fa-edit"></i> {{#str}} edit {{/str}}
                     </button>
                     <button class="btn btn-danger btn-sm"
@@ -73,7 +75,8 @@
                         data-targetid="{{targetid}}"
                         data-assignmentid="{{assignmentid}}"
                         data-competencyid="{{targetid}}"
-                        data-evidenceid="{{evidence.competencyevidenceid}}">
+                        data-evidenceid="{{evidence.competencyevidenceid}}"
+                        data-assingmentcompetencyid="{{evidence.id}}">
                         <i class="fas fa-trash"></i> {{#str}} delete {{/str}}
                     </button>
                     </div>
@@ -136,7 +139,7 @@
     </div>
     {{/courselist}}
     {{#myassignments}}
-    <div class="card mb-4">
+    <div class="card mb-4" id="myassignments">
         <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center pr-4">
         <h2>{{#str}} myassignments , local_taskflow {{/str}}:</h2>
         <div class="profile-circle"><i class="fas fa-tasks text-dark" aria-hidden="true"></i></div>
