--- a/templates/singleassignment.mustache
+++ b/templates/singleassignment.mustache
@@ -48,17 +48,19 @@
             <dd class="col-sm-12">
                 <div class="d-flex justify-content-between align-items-center">
                     <span>{{targetname}}</span>
-                    {{^evidence.evidence_name}}
-                    <button class="btn btn-primary btn-sm"
-                        data-action="openuserevidencemodal"
-                        data-targetid="{{targetid}}"
-                        data-assignmentid="{{assignmentid}}"
-                        data-competencyid="{{targetid}}"
-                        data-evidenceid="{{evidence.competencyevidenceid}}"
-                        data-assingmentcompetencyid="{{evidence.id}}">
-                        <i class="fas fa-upload"></i> {{#str}} uploadevidence , local_taskflow {{/str}}
-                    </button>
-                    {{/evidence.evidence_name}}
+                    {{#allowuploadevidence}}
+                        {{^evidence.evidence_name}}
+                        <button class="btn btn-primary btn-sm"
+                            data-action="openuserevidencemodal"
+                            data-targetid="{{targetid}}"
+                            data-assignmentid="{{assignmentid}}"
+                            data-competencyid="{{targetid}}"
+                            data-evidenceid="{{evidence.competencyevidenceid}}"
+                            data-assingmentcompetencyid="{{evidence.id}}">
+                            <i class="fas fa-upload"></i> {{#str}} uploadevidence , local_taskflow {{/str}}
+                        </button>
+                        {{/evidence.evidence_name}}
+                    {{/allowuploadevidence}}
                     {{#evidence.evidence_name}}
                     <div class="d-flex justify-content-between align-items-center">
                     <button class="btn btn-primary btn-sm mr-2"
