Improvement: Show supervisor on assigment

--- a/templates/singleassignment.mustache
+++ b/templates/singleassignment.mustache
@@ -38,6 +38,7 @@
         <p>{{description}}</p>
         <hr>
         <p>{{#str}} duedateto , local_taskflow {{/str}} <b>{{duedate}}</b></p>
+        <p>{{#str}} supervisor:contacther , local_taskflow {{/str}} <b><a href="mailto:{{supervisoremail}}">{{supervisorfullname}}</a></b></p>
         {{#target}}
         <hr>
         <h5>{{#str}} competencies , local_taskflow {{/str}}:</h5>
