--- a/templates/singleassignment.mustache
+++ b/templates/singleassignment.mustache
@@ -47,7 +47,7 @@
         <dl class="row">
             <dd class="col-sm-12">
             <ul>
-                <li>
+                <li class="custom-li{{#iscompleted}} completed{{/iscompleted}}">
                     <div class="d-flex justify-content-between align-items-center">
                     <span>{{targettypestr}}</span>
                     <b>{{{targetname}}}</b>
