--- a/templates/singleassignment.mustache
+++ b/templates/singleassignment.mustache
@@ -131,6 +131,7 @@
         {{/assignmentdata}}
     </div>
   </div>
+  {{#hascompetency}}
   {{#courselist}}
     <div class="card mb-4">
         <div class="card-header d-flex justify-content-between align-items-center pr-4">
@@ -155,6 +156,7 @@
         </div>
     </div>
     {{/courselist}}
+    {{/hascompetency}}
 </div>
 
 
