--- a/templates/history_list_row.mustache
+++ b/templates/history_list_row.mustache
@@ -76,10 +76,10 @@
 
 {{#invisiblerow}}
 <tr>
-  <td colspan="3" class="{{columnclass}} {{key}} {{^value}}novalue{{/value}}"
+  <td colspan="3" class="{{columnclass}} {{key}} {{^value}}novalue{{/value}} border-0"
       data-label="{{key}}"
       data-localized="{{localized}}">
-    <div class="collapse" id="collapseRow{{rowid}}">
+    <div class="collapse my-2 mx-4 bl-border-left" id="collapseRow{{rowid}}">
       {{#columniclassbefore}}
         <i class="{{.}}" aria-hidden="true"></i>
       {{/columniclassbefore}}
