--- a/templates/history_list_container.mustache
+++ b/templates/history_list_container.mustache
@@ -91,9 +91,9 @@
      <div class="wunderbyte_table_container_{{idstring}} {{uniqueid}}{{!
           }}{{#showfilterbutton}} wunderbyte_table_filter_on{{/showfilterbutton}}{{!
           }}{{#filterdeactivated}} inactivefilter{{/filterdeactivated}}{{!
-          }}{{#nofilteratall}} nofilter{{/nofilteratall}} mt-2" data-encodedtable="{{encodedtable}}">
+          }}{{#nofilteratall}} nofilter{{/nofilteratall}}" data-encodedtable="{{encodedtable}}">
           <div class="container-fluid mw-100">
-               <div class="row mb-2">
+               <div class="row">
                     <div class="col-md-4">
                          <div class="d-flex">
                               {{> local_wunderbyte_table/component_toggle }}
