Bugfix: Backbutton in editassignment searches for the last page #147
fix

--- a/templates/editassignment.mustache
+++ b/templates/editassignment.mustache
@@ -29,7 +29,7 @@
 
 <div class="container my-4">
   <h2 class="mb-4">{{#str}} detailview, local_taskflow {{/str}}</h2>
-  <button type="button" class="btn btn-secondary" onclick="window.history.back()">
+  <button type="button" class="btn btn-secondary" data-region="editassignment-smartback" data-action="smartback">
     {{#str}} back, core {{/str}}
   </button>
 
