--- a/templates/editassignment.mustache
+++ b/templates/editassignment.mustache
@@ -56,7 +56,7 @@
       {{{historylist}}}
     </div>
   </div>
-
+</div>
 
 {{#js}}
 require(['local_taskflow/editassignmentform'], function(init) {
