linting: update mustache example

--- a/templates/dashboards/dashboard_assignments.mustache
+++ b/templates/dashboards/dashboard_assignments.mustache
@@ -20,8 +20,9 @@
     Context variables required for this template:
     Example context (json):
     {
-        "userid" : 1
-
+        "headline": "Upcoming Assignments",
+        "description": "Below is a list of your assignments due in the next two weeks.",
+        "table": "<table class=\"table table-striped\"><thead><tr><th>Course</th><th>Assignment</th><th>Due Date</th></tr></thead><tbody><tr><td>Math 101</td><td>Homework 3</td><td>10 June 2025</td></tr><tr><td>Biology 202</td><td>Lab Report</td><td>12 June 2025</td></tr></tbody></table>"
     }
 }}
 
