--- a/templates/editassignment.mustache
+++ b/templates/editassignment.mustache
@@ -29,9 +29,11 @@
 
 <div class="container my-4">
   <h2 class="mb-4">{{#str}} detailview, local_taskflow {{/str}}</h2>
-  <button type="button" data-returnurl="{{returnurl}}" class="btn btn-secondary" data-region="editassignment-smartback" data-action="smartback">
-    {{#str}} back, core {{/str}}
-  </button>
+  {{#returnurl}}
+    <button type="button" href="{{returnurl}}" class="btn btn-secondary" data-region="editassignment-smartback">
+      {{#str}} back, core {{/str}}
+    </button>
+  {{/returnurl}}
 
   <!-- Assignment data -->
   <div class="card mb-4">
