--- a/templates/editassignment.mustache
+++ b/templates/editassignment.mustache
@@ -42,7 +42,7 @@
       <dl class="row">
         {{#assignmentdata}}
         <dt class="col-sm-4">{{label}}</dt>
-        <dd class="col-sm-8">{{value}}</dd>
+        <dd class="col-sm-8">{{{value}}}</dd>
         {{/assignmentdata}}
       </dl>
         <div data-id="assignmentform" data-assignmentid="{{id}}">
