--- a/templates/singleassignment.mustache
+++ b/templates/singleassignment.mustache
@@ -88,9 +88,15 @@
             <dt></dt>
             <dd class="col-sm-12">
             <ul>
-                <li class="custom-li{{#iscompleted}} completed{{/iscompleted}}">
+                <li class="custom-li{{#completed}} completed{{/completed}}">
                     <div class="d-flex justify-content-between align-items-center">
-                    <span>{{targettypestr}}</span>
+                    <span>
+                        {{targettypestr}}
+                        (
+                        {{#completed}}{{#str}} completed , local_taskflow {{/str}}{{/completed}}
+                        {{^completed}}{{#str}} notcompleted , local_taskflow {{/str}}{{/completed}}
+                        )
+                    </span>
                     <b>{{{targetname}}}</b>
                     {{#allowuploadevidence}}
                         {{^evidence.evidence_name}}
@@ -165,7 +171,7 @@
                 </div>
                 {{/evidence}}
                    </li>
-                </ul> 
+                </ul>
             </dd>
         </dl>
         {{/target}}
