GH-193: Bugfix: fix back button

--- a/templates/editassignment.mustache
+++ b/templates/editassignment.mustache
@@ -30,9 +30,9 @@
 <div class="container my-4">
   <h2 class="mb-4">{{#str}} detailview, local_taskflow {{/str}}</h2>
   {{#returnurl}}
-    <button type="button" href="{{returnurl}}" class="btn btn-secondary" data-region="editassignment-smartback">
+    <a href="{{returnurl}}" class="btn btn-secondary mb-2" data-region="editassignment-smartback">
       {{#str}} back, core {{/str}}
-    </button>
+    </a>
   {{/returnurl}}
 
   <!-- Assignment data -->
