--- a/templates/dashboard.mustache
+++ b/templates/dashboard.mustache
@@ -53,6 +53,11 @@
                 {{#str}} reports, core {{/str}}
             </a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" id="reports-tab-{{uniqid}}" data-toggle="tab" href="#booking-{{uniqid}}" role="tab" aria-controls="booking" aria-selected="false">
+                {{#str}} reports, core {{/str}}
+            </a>
+        </li>
         {{#data.users}}
             <li class="nav-item">
                 <a class="nav-link d-flex align-items-center justify-content-center"
@@ -84,11 +89,7 @@
         <div class="row">
         {{#data.dashboard}}
             <div class="col-md-6 mb-2">
-                <div class="card h-100">
-                    <div class="card-body">
-                        {{{.}}}
-                    </div>
-                </div>
+                {{{.}}}
             </div>
         {{/data.dashboard}}
         </div>
@@ -97,13 +98,22 @@
             <div class="row">
                 {{#data.rules}}
                     <div class="col-md-6 mb-2">
+                                {{{.}}}
+                    </div>
+                {{/data.rules}}
+            </div>
+       </div>
+        <div class="tab-pane fade" id="booking-{{uniqid}}" role="tabpanel" aria-labelledby="booking-tab-{{uniqid}}">
+            <div class="row">
+                {{#data.booking}}
+                    <div class="col-md-12 mb-2">
                         <div class="card h-100">
                             <div class="card-body">
                                 {{{.}}}
                             </div>
                         </div>
                     </div>
-                {{/data.rules}}
+                {{/data.booking}}
             </div>
        </div>
         {{#data.users}}
@@ -113,12 +123,8 @@
              aria-labelledby="user-tab-{{id}}-{{../uniqid}}">
             <div class="row">
              {{#html}}
-                <div class="col-md-6 mb-2">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            {{{.}}}
-                        </div>
-                    </div>
+                <div class="col-md-12 mb-2">
+                    {{{.}}}
                 </div>
              {{/html}}
              </div>
