Changes in mustache for taskflowadapter #203

--- a/templates/editassignment.mustache
+++ b/templates/editassignment.mustache
@@ -62,6 +62,6 @@
 
 {{#js}}
 require(['local_taskflow/editassignmentform'], function(init) {
-    init.init('[data-id="assignmentform"]', 'local_taskflow\\form\\editassignment');
+    init.init('[data-id="assignmentform"]', '{{{adapter}}}');
 });
 {{/js}}
