--- a/templates/dashboards/dashboard_assignments.mustache
+++ b/templates/dashboards/dashboard_assignments.mustache
@@ -30,4 +30,9 @@
 <h2>{{headline}}</h2>
     <p>{{description}}</p>
     <div class="assignmentstable">{{{table}}}</div>
+    {{#information}}
+        <div class="alert alert-info mt-4" role="alert">
+            {{{information}}}
+        </div>
+    {{/information}}
 </div>
