--- a/templates/dashboard.mustache
+++ b/templates/dashboard.mustache
@@ -26,7 +26,7 @@
 }}
 
 <div id="dashboard-{{uniqid}}"  data-region="dashboard-wrapper" data-uniqueid="{{uniqid}}">
-<div data-region="tf-selectuserformcontainer"> 
+<div data-region="tf-selectuserformcontainer">
 <div class="mb-3">
     <div class="form-autocomplete-selection w-100" role="listbox" aria-atomic="true" tabindex="0">
          <span class="m-1 h-5"></span>
@@ -94,7 +94,7 @@
                 {{/data.rules}}
             </div>
        </div>
-        <div class="tab-pane fade" id="booking-{{uniqid}}" role="tabpanel" aria-labelledby="booking-tab-{{uniqid}}">
+        <div class="tab-pane fade" id="booking-{{uniqid}}" role="tabpanel" aria-labelledby="bookings-tab-{{uniqid}}">
             <div class="row">
                 {{#data.booking}}
                     <div class="col-md-12 mb-2">
@@ -107,7 +107,7 @@
                 {{/data.booking}}
             </div>
         </div>
-        <div class="tab-pane fade" id="stats-{{uniqid}}" role="tabpanel" aria-labelledby="home-tab-{{uniqid}}">
+        <div class="tab-pane fade" id="stats-{{uniqid}}" role="tabpanel" aria-labelledby="stats-tab-{{uniqid}}">
             <div class="row">
             {{#data.dashboard}}
                 <div class="col-md-6 mb-2">
@@ -129,7 +129,7 @@
                 </div>
              {{/html}}
              </div>
-        </div>        
+        </div>
         {{/data.users}}
         <!-- Dynamic pane placeholder -->
     </div>
