--- a/templates/dashboard.mustache
+++ b/templates/dashboard.mustache
@@ -12,7 +12,7 @@
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
 {{!
-    @template local_adele/initview
+    @template local_taskflow/initview
     Classes required for JS:
     * none
     Data attributes required for JS:
