--- a/templates/editassignment.mustache
+++ b/templates/editassignment.mustache
@@ -54,7 +54,7 @@
 {{#hascommentform}}
 <!--CommentForm -->
 <div class="card mb-4">
-    <div class="card-header bg-primary text-white">KomEnTAr</div>
+    <div class="card-header bg-primary text-white">{{#str}} comment, local_taskflow {{/str}}</div>
     <div class="card-body">
         <div data-id="commentform" data-assignmentid="{{id}}"
              {{#returnurl}}data-returnurl="{{returnurl}}"{{/returnurl}}>
