--- a/templates/dashboard.mustache
+++ b/templates/dashboard.mustache
@@ -27,17 +27,17 @@
 
 <div id="dashboard-{{uniqid}}"  data-region="dashboard-wrapper" data-uniqueid="{{uniqid}}">
 <div data-region="tf-selectuserformcontainer">
-<div class="mb-3">
-    <div class="form-autocomplete-selection w-100" role="listbox" aria-atomic="true" tabindex="0">
-         <span class="m-1 h-5"></span>
-    </div>
-    <div class="form-autocomplete-input d-md-inline-block me-md-2 position-relative">
-        <input type="text" class="form-control">
-        <span class="form-autocomplete-downarrow position-absolute p-1">▼</span>
+    <div class="mb-3">
+        <div class="form-autocomplete-selection w-100" role="listbox" aria-atomic="true" tabindex="0">
+            <span class="m-1 h-5"></span>
+        </div>
+        <div class="form-autocomplete-input d-md-inline-block me-md-2 position-relative">
+            <input type="text" class="form-control">
+            <span class="form-autocomplete-downarrow position-absolute p-1">▼</span>
+        </div>
     </div>
 </div>
-
-</div>  <!-- Selector row ABOVE the tabs -->
+<!-- Selector row ABOVE the tabs -->
     <!-- Nav tabs -->
 <div class="tab-wrapper">
 
