--- a/templates/dashboards/dashboard_userstats.mustache
+++ b/templates/dashboards/dashboard_userstats.mustache
@@ -37,10 +37,10 @@
                     <h6 class="text-muted mb-1">{{#str}} traininghistory, local_taskflow {{/str}}</h6>
                     <p class="mb-1">
                         {{#userid}}
-                            <a href='/mod/booking/mybookings.php?userid={{userid}}'>
+                            <a href='/mod/booking/mybookings.php?userid={{userid}}&completed=1'>
                         {{/userid}}
                         {{^userid}}
-                            <a href='/mod/booking/mybookings.php'>
+                            <a href='/mod/booking/mybookings.php&completed=1'>
                         {{/userid}}
                             <strong>{{profile.entries}}</strong> {{#str}} coursesfinished, local_taskflow {{/str}}
                         </a>
