Improvement: Add mycertificates and dashboard improvements

--- a/templates/dashboard.mustache
+++ b/templates/dashboard.mustache
@@ -52,7 +52,7 @@
         {{/data.rules.0}}
         <li class="nav-item">
             <a class="nav-link" id="bookings-tab-{{uniqid}}" data-toggle="tab" href="#booking-{{uniqid}}" role="tab" aria-controls="booking-{{uniqid}}" aria-selected="false">
-                {{#str}} bookings, mod_booking {{/str}}
+                {{#str}} mybookingoptions, mod_booking {{/str}}
             </a>
         </li>
         {{#data.dashboard.0}}
